[FIXED] removed unnecessary imports and wrapped in useCallback

--- a/src/app/products/search/page.module.css
+++ b/src/app/products/search/page.module.css
@@ -4,8 +4,12 @@
   grid-column-gap: 25px;
   grid-row-gap: 80px;
 }
-
+.page {
+  flex: 1;
+  display: flex;
+}
 .flex_page {
+  flex: 1;
   display: flex;
   margin-top: 15px;
   overflow: visible;
