--- a/src/widgets/footer/ui/Footer.module.css
+++ b/src/widgets/footer/ui/Footer.module.css
@@ -1,6 +1,7 @@
 .footer {
   background-color: #ffffff;
   padding: 20px 0;
+  display: fixed;
 }
 
 .container {
